update pom of version_2