@@ -26,21 +26,23 @@
         <!-- Ba-Dua -->
         <badua.reportDir>${coverage.reportDir}/badua-reports</badua.reportDir>
         <badua.agent>-javaagent:jars/badua/ba-dua-agent-rt-0.4.1-SNAPSHOT-all.jar -Doutput.file=${coverage.reportDir}/badua.ser</badua.agent>
-        <badua.cli>java -jar jars/ba-dua-cli-0.4.1-SNAPSHOT-all.jar report -classes target/test-classes -input ${coverage.reportDir}/badua.ser -xml ${badua.reportDir}/coverage.xml</badua.cli>
+        <badua.windows.cli>
+            mkdir target\coverage-reports\badua-reports | java -jar jars/badua/ba-dua-cli-0.4.1-SNAPSHOT-all.jar report -classes target/test-classes -input ${coverage.reportDir}/badua.ser -xml ${badua.reportDir}/coverage.xml
+        </badua.windows.cli>
+        <badua.unix.cli>
+            mkdir target/coverage-reports/badua-reports | java -jar jars/badua/ba-dua-cli-0.4.1-SNAPSHOT-all.jar report -classes target/test-classes -input ${coverage.reportDir}/badua.ser -xml ${badua.reportDir}/coverage.xml
+        </badua.unix.cli>
 
         <!-- Surefire -->
         <surefire.reportDir>${coverage.reportDir}/surefire-reports</surefire.reportDir>
         <surefire.jacoco>${jacoco.agent}=destfile=${coverage.reportDir}/jacoco-ut.exec</surefire.jacoco>
         <surefire.badua>${badua.agent}</surefire.badua>
 
-        <!-- Failsafe -->
-        <failsafe.reportDir>${coverage.reportDir}/failsafe-reports</failsafe.reportDir>
-        <failsafe.jacoco>${jacoco.agent}=destfile=${coverage.reportDir}/jacoco-it.exec</failsafe.jacoco>
-
         <!-- Sonar -->
         <sonar.organization>livias1726</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
+        <!-- Coverage -->
         <sonar.sources>lib</sonar.sources>
         <sonar.binaries>target/classes</sonar.binaries>
         <sonar.java.binaries>target/classes</sonar.java.binaries>
@@ -65,25 +67,6 @@
                             </argLine>
                             <reportsDirectory>${surefire.reportDir}</reportsDirectory>
                         </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>3.0.0-M6</version>
-                        <configuration>
-                            <argLine>
-                                -Xmx1024m -XX:MaxPermSize=256m ${surefire.jacoco}
-                            </argLine>
-                            <reportsDirectory>${failsafe.reportDir}</reportsDirectory>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>integration-test</goal>
-                                    <goal>verify</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -112,23 +95,12 @@
                         <version>0.8.7</version>
                         <executions>
                             <execution>
-                                <id>prepare-ut-agent</id>
-                                <phase>process-test-classes</phase>
+                                <id>prepare-agent</id>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
                                 <configuration>
                                     <destFile>${coverage.reportDir}/jacoco-ut.exec</destFile>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>prepare-it-agent</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                                <configuration>
-                                    <destFile>${coverage.reportDir}/jacoco-it.exec</destFile>
                                 </configuration>
                             </execution>
                             <execution>
@@ -144,7 +116,18 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!--
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>Windows</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
@@ -157,16 +140,49 @@
                                 </goals>
                                 <phase>verify</phase>
                                 <configuration>
-                                    <executable>cmd.exe</executable>
-                                    <commandlineArgs>
-                                        mkdir target/coverage-reports/badua-reports | ${badua.cli}
-                                    </commandlineArgs>
+                                    <executable>cmd</executable>
+                                    <arguments>
+                                        <argument>/C</argument>
+                                        <argument>${badua.windows.cli}</argument>
+                                    </arguments>
                                 </configuration>
                             </execution>
                         </executions>
                     </plugin>
-                    -->
-               </plugins>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>unix</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <id>badua-cli</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <phase>verify</phase>
+                                <configuration>
+                                    <executable>bash</executable>
+                                    <arguments>
+                                        <argument>-c</argument>
+                                        <argument>${badua.unix.cli}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
             </build>
         </profile>
     </profiles>
@@ -181,21 +197,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
-        </dependency>
-        <dependency>
-            <groupId>br.usp.each.saeg</groupId>
-            <artifactId>ba-dua-core</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>3.0.0-M6</version>
         </dependency>
     </dependencies>
 
